Tue Jun 15 23:45:50 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* AUTHORS COPYING README: update to reflect the LGPL licence
	  and the inheritance from the marmot code base.

Tue Jun 15 23:25:03 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* README gamin.spec.in: added mail archive URL, 0.0.1-pre1

Tue Jun 15 21:45:20 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* README TODO: I was sure I updated the README before the
	  import... updated the TODO to reflect the current state

Tue Jun 15 21:33:55 CEST 2004 Daniel Veillard <veillard@redhat.com>

	* m4/gthread-supported.m4: still needed for configure.in until
	  one got rid of any thread handling in the server code.