@@ -1,0 +1,1 @@
+See the AUTHORS and the COPYING file for informations.
