@@ -6,10 +6,7 @@
  - test for availability of setsid(), usleep()
  - remove threading, gam_poll_init_full(), use timers instead
    of running a loop with usleep in a thread.
- - code 'cb' processing cleanup
  - doc extraction and reformatting of comments in gtk-doc style
- - make Copyright file for LGPL
- - block exports of all symbols not from fam.h
                                                                                 
 Regression tests:
  - try all the file length on the client till error.
@@ -21,3 +18,7 @@ Done:
  - autostart/stop of the server side
  - cleanup deps w.r.t. libmarmot
  - add a flag for server to not exit on idle: --notimeout
+ - block exports of all symbols not from fam.h : done for the shared library
+   the static one still exports gamin_* symbols though
+ - code 'cb' processing cleanup
+ - make Copyright file for LGPL
